--- a/LESS/index.less
+++ b/LESS/index.less
@@ -3,11 +3,12 @@
 
 /* Below this line is where you will start your work */
 /* It is important to note, you will not be writing any CSS in this file*/
-@import '../Header/Header.less';
-
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto';
+@import "../Header/Header";
+@import "../article/Article";
+html,
+body {
+  margin-top: 30px;
+  padding: 10px;
+  font-family: "Roboto";
   background-color: #fffef7;
 }
